# version-checker

./: .bumpversion.cfg  .coveragerc  .gitignore  .pylintrc  .travis.yml  Readme.md  integration-test.sh  openapi-spec.json  pom.xml  requirements.txt  setup.cfg  version_checker.py
.github/workflows/: cd.yml  ci.yml  workflow.yml
kustomize/base/: service.yaml
tests/: bad_config_dupe_option.txt  bad_config_malformatted.txt  bad_config_sections.txt  ok_config_empty.txt  test_utils.py
version_checker/: Readme.md  __init__.py  cli.py  constants.py  merge_utils.py  utils.py  version_checker.py
version_checker/examples/: openapi-spec.json  pom.xml  version.txt
version_checker/examples/kustomize/base/: service.yaml
version_checker/examples/nested_config/: .bumpversion.cfg
