[metadata]
name = version-checker
version = 0.1.14
author = kmfarley11
author_email = kmfarley11@gmail.com
description = Dev utility to verify hardcoded versions are in sync & updated
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://bitbucket.org/kmfarley11/git-hooks
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages=
    version_checker
python_requires = >=3.6
install_requires =
    GitPython
    bump2version
    semver

[options.entry_points]
console_scripts =
    version_checker = version_checker.cli:main

[options.extras_require]
build = 
    build[virtualenv]
    setuptools
test = 
    pytest
    pytest-mock
    pytest-cov
    coverage
    mock
dev =
    %(build)s 
    %(test)s
    pylint
